# system_integration

./: LICENSE
01._Miscellaneuos/04._database_granular_access/: DB-Choice.md  Exposee.md  Integrator.md
01._Miscellaneuos/04a._sever-sent_events/: README.MD  app.js  package-lock.json  package.json
01._Miscellaneuos/04a._sever-sent_events/public/: index.html
03._Modules/assignments/: encoding.py
03._Modules/html_with_modules/: index.html  index.js
03._Modules/python_modules/my_module/: __init__.py  file_one.py  file_two.py
04._Encoding_Decoding/node/: index.js
05._Python_Environments/03._Poetry_Environment/: pyproject.toml
05._Python_Environments/04._Poetry_env_2/: pyproject.toml
06._Servers/python/: main.py  pyproject.toml
08._Server_To_Server/node/: app.js
08._Server_To_Server/python/: main.py  pyproject.toml
09._Environment_Variables/node/: .env.template  package.json
09._Environment_Variables/python/: main.py  pyproject.toml
10._Date/node/: app.js
10._Date/node/public/: index.html
10._Date/python/: main.py
11._Start_Polling/node/: app.js
11._Start_Polling/node/public/: index.html
12._Long_Polling/node/: app.js
13._Server-sent_Events/node/: app.js
13._Server-sent_Events/node/public/: index.html
