[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Joachim Tyrfing Richter <joac0724@stud.kea.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
