[tool.poetry]
name = "server-to-server"
version = "0.1.0"
description = ""
authors = ["Joachim Tyrfing Richter <joac0724@stud.kea.dk>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
